[package]
name = "uaf"
version = "0.1.0"
edition = "2021"
default-run = "uaf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
faccess = "0.2.4"
indexmap = { version = "2.2.3", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
stringlit = "2.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
